# charlie

./: .clang-format  .gitignore  CMakeLists.txt  README.md  configure
docs/: features.md  todo.md
eval/debug-mock/: package.json
eval/debug-mock/src/: debug-adapter.ts  debug-client.ts  debug-session.ts  extension.ts  mockDebug.ts  mockRuntime.ts
eval/debug-mock/src/common/: protocol.ts
samples/: simple.bc.txt  simple.cc  simple.cc.bc.txt  simple.out.txt
src/adapter/common/: protocol.ts
src/adapter/console/src/: index.ts  protocol.ts
src/adapter/vscode/: README.md  language-configuration.json  package.json  tsconfig.json
src/adapter/vscode-charlie-adapter/: language-configuration.json  package-lock.json  package.json  tsconfig.json
src/adapter/vscode-charlie-adapter/src/: debug-adapter.ts  debug-client.ts  debug-session.ts  extension.ts  tslint.json
src/adapter/vscode-charlie-adapter/src/common/: protocol.ts
src/adapter/vscode/src/: connector-runtime.ts  debug-adapter.ts  debug-client.ts  extension.ts  index.ts  protocol.ts
src/charlie/: CMakeLists.txt  compiler.cc  compiler.h  scanner.cc  scanner.h
src/charlie/api/: externalFunctionManager.cc  externalFunctionManager.h  external_function_manager.cc  external_function_manager.h
src/charlie/common/: comparer_string.cc  comparer_string.h  definitions.h  exportDefs.h  io.cc  io.h  logginComponent.cc  logginComponent.h  loggingComponent.cc  loggingComponent.h  logging_component.cc  logging_component.h  tieTree.h
src/charlie/program/: functionDec.cc  functionDec.h  functionDef.cc  functionDef.h  function_declaration.cc  function_declaration.h  instruction.cc  instruction.h  mapping.cc  mapping.h  scope.cc  scope.h  scopeRoutine.cc  scopeRoutine.h  statement.cc  statement.h  unresolvedProgram.cc  unresolvedProgram.h  unresolved_program.cc  unresolved_program.h  variableDec.cc  variableDec.h  variable_declaration.cc  variable_declaration.h
src/charlie/protobuf/: debug.proto  mapping.proto
src/charlie/token/: base.cc  base.h  functionDec.cc  functionDec.h  functionDef.cc  functionDef.h  variableDec.cc  variableDec.h
src/charlie/vm/: instruction.cc  instruction.h  register.cc  register.h  runtime.cc  runtime.h  state.cc  state.h
src/cli/: CMakeLists.txt  command.cc  command.h  flag.cc  flag.h  log.cc  log.h  main.cc
src/console/: command.cc  command.h  flag.cc  flag.h  log.cc  log.h  main.cpp
test/: charlie.test.cc
vs/: charlie.sln
vs/charlie/: charlie.vcxproj  charlie.vcxproj.filters
vs/charlie.test/: charlie.test.vcxproj  charlie.test.vcxproj.filters
vs/console/: console.vcxproj  console.vcxproj.filters
